force-app/main/default/objects/Product_Info__c/Product_Info__c.object-meta.xml
<CustomObject>
    <label>Product Info</label>
    <nameField>
        <label>Product Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>