force-app/main/default/objects/Product_Info__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>