force-app/main/default/objects/Product_Info__c/fields/Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>