force-app/main/default/objects/Product_Info__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <displayFormat>Pn{0000}</displayFormat>
    <label>Product Number</label>
    <type>AutoNumber</type>
</CustomField>